fixed some issues with overflow-y.

--- a/client/stylesheets/createEventPageStyles/createEventFormOverides.css
+++ b/client/stylesheets/createEventPageStyles/createEventFormOverides.css
@@ -63,6 +63,7 @@
 .create-event-page-main{
 	background-color: #A200FF;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 .create-event-logo{
