--- a/client/stylesheets/sitewideStyles.css
+++ b/client/stylesheets/sitewideStyles.css
@@ -1,6 +1,5 @@
 html,body{
 	height: 100%;
-	overflow-y: hidden;
 }
 .btn-danger {
 	background-color: #DB2B39;
